# test-rust-os

./: .gitignore  Cargo.toml  readme.md  x86_64-unknown-uefi.json
esp/: NvVars
esp/efi/boot/: bootx64.efi
script/: build.sh  readme.md  test.sh
src/: main.rs
