[package]
name = "ring_os"
version = "0.1.0"
edition = "2021"

[dependencies]
# bootloader = "0.11.8"
log = "0.4.22"
uefi = { version = "0.33.0", features = ["logger", "panic_handler"] }

[unstable]
build-std = ["core", "compiler_builtins", "alloc"] # really needed?

[build]
build-stage = 1
target = ["x86_64-unknown-uefi"]


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[target.x86_64-unknown-uefi]
linker = "rust-lld"

[target.'cfg(target_os = "none")']
runner = "bootimage runner"